# LeapSDK

./: .gitignore  CMakeLists.txt  myNotes.txt
samples/: Makefile  MyApp.cpp  Sample
share/: LeapSDKConfig.cmake
